Update sample config and add instructions

--- a/Software/v1.0 - MVP/calibrate-offsets.cfg
+++ b/Software/v1.0 - MVP/calibrate-offsets.cfg
@@ -29,7 +29,7 @@ gcode:
 #                        Working
 #####################################################################
 [gcode_macro CALIBRATE_OFFSETS]
-description: Tool offsetS calibration
+description: Tool offsets calibration
 gcode:
     {% set tools = printer.toolchanger.tool_numbers %}
     {% set names = printer.toolchanger.tool_names %}
