--- a/Software/v1.0 - MVP/homing.cfg
+++ b/Software/v1.0 - MVP/homing.cfg
@@ -32,17 +32,16 @@ gcode:
     ### Homing Actions
     # Mandatory clearance moves ------------------------------------------------------
     {% if x == 1 or y == 1 or a == 1 %}
-        G91                                                                    # Relative mode
         {% if "z" in printer.toolhead.homed_axes %}                            # If z is already homed
             {% if cur_z < 40.0 %}
                 RESPOND TYPE=echo MSG='Nozzle Clearance...'
-                G1 Z{ 40.0 - cur_z } F1500                                     # move Z up
+                G1 Z40.0 F1500                                                 # move Z up
             {% endif %}
         {% else %}                                                             # but if x is not homed
             {% if  printer.tool_probe_endstop.active_tool_number|int == -1 %}
                 RESPOND TYPE=echo MSG='Nozzle Clearance...'
                 SET_KINEMATIC_POSITION Z=0                                     # Set curent Z position as 0
-                G1 Z+40 F3000                                                  # move Z up
+                G1 Z40 F3000                                                   # move Z up
                 {% if a != 1 %}
                     M84                                                        # remove the temporary postions
                 {% endif %}
@@ -55,48 +54,40 @@ gcode:
         {% if "z" in printer.toolhead.homed_axes %}                            # If z is already homed
             {% if cur_z > 200.0 %}
                 RESPOND TYPE=echo MSG='Umbilical Clearance...'
-                G1 Z{ 200.0 - cur_z } F3000                                    # move Z down
+                G1 Z200.0 F3000                                                # move Z down
             {% endif %}
         {% else %}
             RESPOND TYPE=echo MSG='Umbilical Clearance...'
             G28 Z                                                              # temporary home z
-            G1 Z+40 F3000                                                      # Move Z up off the bed
+            G1 Z40 F3000                                                       # Move Z up off the bed
         {% endif %}
-        G90                                                                    # Asolute mode
-        
-    # Specific moves ------------------------------------------------------------------
-        {% if x == 1 or y == 1 or a == 1 %}                                    # If X or Y is called
-            RESPOND TYPE=echo MSG='Home Y...'
-            G28 Y                                                              # Home Y
-        {% endif %}    
-        
-        {% if x == 1 or a == 1 %}                                              # If X is called
-            RESPOND TYPE=echo MSG='Home X...'
-            G28 X                                                              # Home X
-        {% endif %}
-    
-        {% if z == 1 or a == 1 %}                                              # If "G28" or "G28 Z" is called
-            RESPOND TYPE=echo MSG='Home Z...'
-            G1 X{center_x} Y{center_y} F10000                                  # Move the toolhead to the centre of the bed
-            G28 Z                                                              # Home Z
-            _ADJUST_Z_HOME_FOR_TOOL_OFFSET                                     # Apply toolhead specific Z-offset
-        {% endif %}
-        _APPLY_ACTIVE_TOOL_GCODE_OFFSETS                                       # Apply the X and Y toolhead offsets
-        M400
-    
-    {% else %}
-        RESPOND TYPE=echo MSG='Home Z...'
-        {% if "xyz" in printer.toolhead.homed_axes %}                          # if printer is already homed
-            G91
-            {% if cur_z < 40.0 %}
-                RESPOND TYPE=echo MSG='Nozzle Clearance...'
-                G1 Z{ 40.0 - cur_z } F1500                                     # move Z up to 15mm
-            {% endif %}
-            G90
-            G1 X{center_x} Y{center_y} Z40 F10000                              # Move to centre of the bed
-        {% endif %}
-        
-        G28 Z                                                                  # Home Z
-        _ADJUST_Z_HOME_FOR_TOOL_OFFSET                                         # Apply toolhead specific Z-offset
     {% endif %}
+    
+    # Specific moves ------------------------------------------------------------------
+    {% if y == 1 or a == 1 %}                                    # If X or Y is called
+        RESPOND TYPE=echo MSG='Home Y...'
+        G28 Y                                                              # Home Y
+    {% endif %}    
+    
+    {% if x == 1 or a == 1 %}                                              # If X is called
+        RESPOND TYPE=echo MSG='Home X...'
+        {% if "y" in printer.toolhead.homed_axes %}                        # If z is already homed
+            G1 Y350 F3000                                                  # Move Y back
+        {% else %}
+            G28 Y
+        {% endif %}
+        G28 X                                                              # Home X
+    {% endif %}
+
+    {% if z == 1 or a == 1 %}                                              # If "G28" or "G28 Z" is called
+        RESPOND TYPE=echo MSG='Home Z...'
+        {% if a == 1 %}                                                    # If z is already homed
+            G1 X{center_x} Y{center_y} F10000                              # Move the toolhead to the centre of the bed
+        {% endif %}
+        G28 Z                                                              # Home Z
+        _ADJUST_Z_HOME_FOR_TOOL_OFFSET                                     # Apply toolhead specific Z-offset
+    {% endif %}
+    
+    _APPLY_ACTIVE_TOOL_GCODE_OFFSETS                                       # Apply the X and Y toolhead offsets
+    M400
     
