--- a/Software/v1.0 - MVP/toolchanger.cfg
+++ b/Software/v1.0 - MVP/toolchanger.cfg
@@ -1,9 +1,4 @@
 #--------------------------------------------------------------------
-[rounded_path]
-resolution: 0.2
-replace_g0: True
-
-#--------------------------------------------------------------------
 [tool_probe_endstop]
 crash_gcode:
     RESPOND TYPE=error MSG='Tool not detected, expected {printer.toolchanger.tool_number}. Pausing the print.' 
@@ -62,7 +57,7 @@ after_change_gcode:
     {% endif %}
 
     ## load Input Shaper frequency, type and damping ratio 
-    ## (if none or some params_input_shaper_* are set in tool, use default input_shaper_params)
+    ## (if none or some params_input_shaper_* are set in tool, use default input_shaper_params above)
     {% if tool.params_input_shaper_freq_x and tool.params_input_shaper_freq_y %}
       {% if tool.params_input_shaper_type_x and tool.params_input_shaper_type_y %}
         {% if tool.params_input_shaper_damping_ratio_x and tool.params_input_shaper_damping_ratio_y %}
@@ -96,7 +91,7 @@ dropoff_gcode:
     {% else %}
         G0 X{ x } Y{ tool.params_safe_y } Z{ [cur_z+1.0, max_z]|min } F{fast}
     {% endif %}
-    ROUNDED_G0 Y={ y + path[0]['y']|float } D=0 F={fast}    # Move to the first point in the path, in the y axis
+    G0 Y{ y + path[0]['y']|float } F{fast}    # Move to the first point in the path, in the y axis
     STOP_TOOL_PROBE_CRASH_DETECTION
     
     ############## Run the path ###############################
@@ -116,14 +111,9 @@ pickup_gcode:
     
     ##############  Fast to the last point  ################
     G90
-    ROUNDED_G0 Y={tool.params_close_y} F={fast} D=5
-    {% if 'z' in path[0] %}    # For changers that only use YZ
-        ROUNDED_G0 X={x} Z={z + path[-1]['z']|float} F={fast} D=5     
-    {% endif %}
-    {% if 'x' in path[0] %}    # For changers that only use XY
-        ROUNDED_G0 X={x + path[-1]['x']|float} F={fast} D=5
-    {% endif %}
-    ROUNDED_G0 Y={y + path[-1]['y']|float} F={fast} D=0
+    G0 Y{tool.params_close_y} F{fast}
+    G0 X{x + path[-1]['x']|float} F{fast}
+    G0 Y{y + path[-1]['y']|float} F{fast}
 
     ## Wait for temp before actually picking up the tool, while the nozzle is resting on it's pad.
     {% if tool.extruder %}
@@ -142,16 +132,16 @@ pickup_gcode:
     ## Restore the position with smooth rounded move.
     {% if 'X' in restore_position or 'Y' in restore_position or 'Z' in restore_position %}
         {% if 'X' in restore_position and 'Y' in restore_position and 'Z' in restore_position %}
-            ROUNDED_G0 X={restore_position.X} Y={restore_position.Y} Z={restore_position.Z} F={fast} D=0
+            G0 X{restore_position.X} Y{restore_position.Y} Z{restore_position.Z} F{fast}
         {% else %}
             {% if 'X' in restore_position and 'Y' in restore_position %}
-                ROUNDED_G0 X={restore_position.X} Y={restore_position.Y} F={fast} D=500
+                G0 X{restore_position.X} Y{restore_position.Y} F{fast}
             {% else %}
                 {% if 'X' in restore_position %}
-                    ROUNDED_G0 X={restore_position.X} F={fast} D=500
+                    G0 X{restore_position.X} F{fast}
                 {% endif %}
                 {% if 'Y' in restore_position %}
-                    ROUNDED_G0 Y={restore_position.Y} F={fast} D=500
+                    G0 Y{restore_position.Y} F{fast}
                 {% endif %}
             {% endif %}
             {% if 'Z' in restore_position %}
@@ -163,9 +153,6 @@ pickup_gcode:
             {% endif %}
         {% endif %}
     {% endif %}
-
-    ## Disable rounded path
-    ROUNDED_G0 D=0
 
 ####################################################################################
 #                        Marcos overwrite
@@ -237,7 +224,6 @@ gcode:
 [gcode_macro _CPI_CHECK]
 gcode:
     TOOL_CALIBRATE_QUERY_PROBE
-    # RESPOND TYPE=echo MSG='Calibration Probe Inactive = {printer.tools_calibrate.calibration_probe_inactive}...'
     M400
 
 #--------------------------------------------------------------------
