Update config and add more instructions

--- a/Software/v1.0 - MVP/macro-print.cfg
+++ b/Software/v1.0 - MVP/macro-print.cfg
@@ -32,13 +32,7 @@ gcode:
     ## Skew -----------------------------------------------------------
     SET_SKEW CLEAR=1                                        # Clear skew compensation
     SKEW_PROFILE LOAD=calilantern_skew_profile              # Load skew compensation
-
-    ## Re-home --------------------------------------------------------
-    G28                                                     # Homing
     
-    ## Move nozzle to corner ------------------------------------------
-    G1 X0 F9000
-
     ## Set print temps ------------------------------------------------
     {% if "T0_TEMP" in params %}                            # Check if T0 is used
         M104 T0 S{ params.T0_TEMP }
@@ -51,6 +45,21 @@ gcode:
     {% endif %}
     {% if "T3_TEMP" in params %}
         M104 T3 S{ params.T3_TEMP }
+    {% endif %}
+    
+    ## Change to the right TH ----------------------------------------
+    {% if "T3_TEMP" in params %}
+        T3
+    {% else %}
+        {% if "T2_TEMP" in params %}
+            T2
+        {% else %}
+            {% if "T1_TEMP" in params %}
+                T1
+            {% else %}
+                G0 X0 F9000
+            {% endif %}
+        {% endif %}
     {% endif %}
     
     ## Record wipe tower location -------------------------------------
