--- a/Software/v1.0 - MVP/printer.cfg
+++ b/Software/v1.0 - MVP/printer.cfg
@@ -5,6 +5,7 @@
 
 [include macro-general.cfg]
 [include macro-print.cfg]
+[include macro-testing.cfg]
 
 ####################################################################################
 ## 	                MCU
@@ -345,6 +346,7 @@ variable_zh: 10.0
 variable_dock: True
 gcode:
     RESPOND TYPE=echo MSG='Print area centre: {xh}, {yh}, {zh}'
+    RESPOND TYPE=echo MSG='Number of TH: {no_of_toolhead}'
 
 #---------------------------------------------------------------
 [gcode_macro _WIPE_TOWER_LOCATION]
@@ -411,7 +413,7 @@ gcode:
 #*# max_y = 200.47
 #*#
 #*# [tool_probe T0]
-#*# z_offset = -1.035000
+#*# z_offset = -1.005000
 #*#
 #*# [extruder]
 #*# control = pid
@@ -420,12 +422,12 @@ gcode:
 #*# pid_kd = 75.574
 #*#
 #*# [tool T1]
-#*# gcode_x_offset = 0.012500
-#*# gcode_y_offset = 0.425000
-#*# gcode_z_offset = 0.220000
+#*# gcode_x_offset = 0.018750
+#*# gcode_y_offset = 0.406250
+#*# gcode_z_offset = 0.235000
 #*#
 #*# [tool_probe T1]
-#*# z_offset = -0.887500
+#*# z_offset = -0.872500
 #*#
 #*# [extruder1]
 #*# control = pid
