--- a/Software/v1.0 - MVP/toolchanger.cfg
+++ b/Software/v1.0 - MVP/toolchanger.cfg
@@ -57,7 +57,7 @@ after_change_gcode:
     {% endif %}
 
     ## load Input Shaper frequency, type and damping ratio 
-    ## (if none or some params_input_shaper_* are set in tool, use default input_shaper_params above)
+    ## (if none or some params_input_shaper_* are set in tool, use default input_shaper_params)
     {% if tool.params_input_shaper_freq_x and tool.params_input_shaper_freq_y %}
       {% if tool.params_input_shaper_type_x and tool.params_input_shaper_type_y %}
         {% if tool.params_input_shaper_damping_ratio_x and tool.params_input_shaper_damping_ratio_y %}
@@ -145,7 +145,7 @@ pickup_gcode:
                 {% endif %}
             {% endif %}
             {% if 'Z' in restore_position %}
-                {% if wx > 0.5 and wy > tool.params_safe_y and restore_position.Z > 0.2 %}
+                {% if wx > 0 and wy > tool.params_safe_y and restore_position.Z > 0.3 %}
                     G0 X{wx} Y{wy} Z{restore_position.Z+0.4} F{fast}
                 {% else %}
                     G0 Z{restore_position.Z} F{fast}
@@ -224,6 +224,7 @@ gcode:
 [gcode_macro _CPI_CHECK]
 gcode:
     TOOL_CALIBRATE_QUERY_PROBE
+    # RESPOND TYPE=echo MSG='Calibration Probe Inactive = {printer.tools_calibrate.calibration_probe_inactive}...'
     M400
 
 #--------------------------------------------------------------------
@@ -247,6 +248,7 @@ gcode:
         {% set tool_z_offset = printer[tool].gcode_z_offset %}
         {% set probe_z_offset = printer.tool_probe_endstop.active_tool_probe_z_offset %}
         SET_KINEMATIC_POSITION Z={10.0 + tool_z_offset|float + probe_z_offset|float}
+        G0 Z10 F1000
     {% endif %}
 
 #--------------------------------------------------------------------
