--- a/Software/v1.0 - MVP/homing.cfg
+++ b/Software/v1.0 - MVP/homing.cfg
@@ -64,19 +64,20 @@ gcode:
     {% endif %}
     
     # Specific moves ------------------------------------------------------------------
-    {% if y == 1 or a == 1 %}                                    # If X or Y is called
+    {% if y == 1 or a == 1 %}                                                     # If X or Y is called
         RESPOND TYPE=echo MSG='Home Y...'
-        G28 Y                                                              # Home Y
+        G28 Y                                                                     # Home Y
     {% endif %}    
     
-    {% if x == 1 or a == 1 %}                                              # If X is called
+    {% if x == 1 or a == 1 %}                                                     # If X is called
         RESPOND TYPE=echo MSG='Home X...'
-        {% if "y" in printer.toolhead.homed_axes %}                        # If z is already homed
-            G1 Y350 F3000                                                  # Move Y back
+        {% if "y" in printer.toolhead.homed_axes %}
+            G1 Y340 F9000                                                         # Move Y back
+            G1 Y{350 - printer[printer.toolchanger.tool].gcode_y_offset} F3000    # Move Y back
         {% else %}
             G28 Y
         {% endif %}
-        G28 X                                                              # Home X
+        G28 X                                                                     # Home X
     {% endif %}
 
     {% if z == 1 or a == 1 %}                                              # If "G28" or "G28 Z" is called
