--- a/Software/v1.0 - MVP/toolchanger.cfg
+++ b/Software/v1.0 - MVP/toolchanger.cfg
@@ -18,14 +18,14 @@ params_type = 'sb_misschanger'
 params_sb_misschanger_path: [
                              {'x':0,        'y':0,       'f':1.00},
                              {'x':0,        'y':-60,     'f':0.80},
-                             {'x':0,        'y':-65,     'f':0.60},
-                             {'x':0,        'y':-70,     'f':0.60},
-                             {'x':0,        'y':-75,     'f':0.60},
-                             {'x':0,        'y':-70,     'f':0.60},
-                             {'x':0,        'y':-75,     'f':0.40},
-                             {'x':0,        'y':-70,     'f':0.40},
-                             {'x':0,        'y':-75,     'f':0.30},
-                             {'x':0,        'y':-70,     'f':0.30},
+                             {'x':0,        'y':-65,     'f':0.60},    # Wiggle...
+                             {'x':0,        'y':-70,     'f':0.60},    # ...wingle
+                             {'x':0,        'y':-75,     'f':0.60},    # Wiggle...
+                             {'x':0,        'y':-70,     'f':0.60},    # ...wingle
+                             {'x':0,        'y':-75,     'f':0.40},    # Wiggle...
+                             {'x':0,        'y':-70,     'f':0.40},    # ...wingle
+                             {'x':0,        'y':-75,     'f':0.30},    # Wiggle...
+                             {'x':0,        'y':-70,     'f':0.30},    # ...wingle
                              {'x':0,        'y':-80,     'f':0.20},
                              {'x':-6.0,     'y':-80,     'f':0.20},  
                              {'x':-6.0,     'y':-70,     'f':0.30},
