--- a/Software/v1.0 - MVP/T0-SB2209-Revo-LDO.cfg
+++ b/Software/v1.0 - MVP/T0-SB2209-Revo-LDO.cfg
@@ -4,7 +4,6 @@
 [mcu EBBCan0]
 # ~/klippy-env/bin/python ~/klipper/scripts/canbus_query.py can0
 canbus_uuid: 1929c14acd7c
-# canbus_uuid: c0c02a1c29c9
 
 [adxl345]
 cs_pin: EBBCan0: PB12
@@ -144,8 +143,8 @@ params_park_y: 84.00
 params_park_z: 250.0
 
 params_input_shaper_type_x: 'ei'
-params_input_shaper_freq_x: 42.600
+params_input_shaper_freq_x: 47.200
 params_input_shaper_damping_ratio_x: 0.100000
-params_input_shaper_type_y: '2hump_ei'
-params_input_shaper_freq_y: 39.000
+params_input_shaper_type_y: 'ei'
+params_input_shaper_freq_y: 34.800
 params_input_shaper_damping_ratio_y: 0.100000
