--- a/Software/v1.0 - MVP/calibrate-offsets.cfg
+++ b/Software/v1.0 - MVP/calibrate-offsets.cfg
@@ -12,9 +12,10 @@ final_lift_z: 3              # Z Lift after probing done, should be greater than
 samples:5
 samples_result: median       # median, average
 sample_retract_dist:1
-samples_tolerance:0.05       # UPDATE FOR YOUR PRINTER
+samples_tolerance:0.01       # UPDATE THIS WITH YOUR PRINTER
 samples_tolerance_retries:10
-trigger_to_bottom_z: 1.820   # Decrease -> higher nozzle
+# trigger_to_bottom_z: 1.820   # Decrease -> higher nozzle
+trigger_to_bottom_z: 1.870   # Decrease -> higher nozzle
 
 #####################################################################
 #                        Hidden
@@ -22,8 +23,8 @@ trigger_to_bottom_z: 1.820   # Decrease -> higher nozzle
 [gcode_macro _CALIBRATE_MOVE_OVER_PROBE]
 gcode:
     BED_MESH_CLEAR
-    G0 Z60 F9000                # UPDATE FOR YOUR POSITION. Make sure that the nozzle is not touching the probe.
-    G0 X241.76 Y330.28 F9000    # UPDATE FOR YOUR POSITION
+    G0 Z50 F9000                # UPDATE THIS WITH YOUR POSITION. Make sure that the nozzle is not touching the probe.
+    G0 X241.76 Y330.28 F9000    # UPDATE THIS WITH YOUR POSITION
 
 #####################################################################
 #                        Working
