--- a/Software/v1.0 - MVP/config/config_wt_dock.cfg
+++ b/Software/v1.0 - MVP/config/config_wt_dock.cfg
@@ -2,6 +2,7 @@
 [include macro-tc-nozzle_clean.cfg]
 [include ./T0-SB2209-Revo-LDO.cfg]
 [include ./T1-SB2209-Revo-LDO.cfg]
+[include ./T2-RP2040-Dragon-Step.cfg]
 #---------------------------------------------------------------
 [quad_gantry_level]
 #	Gantry Corners for 350mm Build
@@ -28,6 +29,7 @@ variable_zh: 10.0
 variable_dock: True
 gcode:
     RESPOND TYPE=echo MSG='Print area centre: {xh}, {yh}, {zh}'
+    RESPOND TYPE=echo MSG='Number of TH: {no_of_toolhead}'
 
 #---------------------------------------------------------------
 [gcode_macro _WIPE_TOWER_LOCATION]
@@ -94,7 +96,7 @@ gcode:
 #*# max_y = 200.47
 #*#
 #*# [tool_probe T0]
-#*# z_offset = -1.035000
+#*# z_offset = -0.870000
 #*#
 #*# [extruder]
 #*# control = pid
@@ -103,15 +105,21 @@ gcode:
 #*# pid_kd = 75.574
 #*#
 #*# [tool T1]
-#*# gcode_x_offset = 0.012500
-#*# gcode_y_offset = 0.425000
-#*# gcode_z_offset = 0.220000
+#*# gcode_x_offset = 0.084375
+#*# gcode_y_offset = 0.490625
+#*# gcode_z_offset = 0.187500
 #*#
 #*# [tool_probe T1]
-#*# z_offset = -0.887500
+#*# z_offset = -0.777500
 #*#
 #*# [extruder1]
 #*# control = pid
 #*# pid_kp = 36.501
 #*# pid_ki = 4.124
 #*# pid_kd = 80.760
+#*#
+#*# [extruder2]
+#*# control = pid
+#*# pid_kp = 27.329
+#*# pid_ki = 1.804
+#*# pid_kd = 103.505
