--- a/Software/v1.0 - MVP/macro-tc-nozzle_clean.cfg
+++ b/Software/v1.0 - MVP/macro-tc-nozzle_clean.cfg
@@ -3,22 +3,22 @@
 #####################################################################
 [gcode_macro _SCRUB]
 gcode:
-    {% for n in range(5) %}
+    {% for n in range(10) %}
         G1 X177 Y36 F10000
-        G1 X173 Y26
-        G1 X177 Y12
+        G1 X173 Y22
+        G1 X177 Y8
         G1 X173 Y15
-        G1 X177 Y26
+        G1 X177 Y22
         G1 X175 Y20
-        G1 X175 Y12
+        G1 X175 Y8
         G1 X175 Y20
-        G1 X175 Y12
+        G1 X175 Y8
         G1 X175 Y20 F3000
     {% endfor %}
 
 ## ------------------------------------------------------------------
 [gcode_macro _CLEAN]
-variable_clean_temp: 225
+variable_clean_temp: 200
 gcode:
     M104 S{clean_temp}
     
@@ -26,17 +26,16 @@ gcode:
     G1 X175 F9000
     G1 Y40  F9000
 
-    TEMPERATURE_WAIT SENSOR='{printer['toolhead'].extruder}' MINIMUM=220
+    TEMPERATURE_WAIT SENSOR='{printer['toolhead'].extruder}' MINIMUM={clean_temp-1}
     M104 S0
     
     G1 Y26  F3000
     STOP_TOOL_PROBE_CRASH_DETECTION
     _SCRUB
-    TEMPERATURE_WAIT SENSOR='{printer['toolhead'].extruder}' MAXIMUM=190
+    TEMPERATURE_WAIT SENSOR='{printer['toolhead'].extruder}' MAXIMUM={clean_temp-10}
     _SCRUB
     START_TOOL_PROBE_CRASH_DETECTION
     
-    G1 X175 Y15  F6000
     G1 X175 Y120 F9000
 
 #####################################################################
