--- a/Software/v1.0 - MVP/printer.cfg
+++ b/Software/v1.0 - MVP/printer.cfg
@@ -20,7 +20,7 @@ serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_0C0035001150535556323420-if00
 kinematics: corexy           # Printer type：corexy
 max_velocity: 300            # Maximum speed (max. 300)
 max_accel: 7500              # Maximum acceleration (max. 4000)
-max_z_velocity: 30           # Z-axis maximum speed
+max_z_velocity: 20           # Z-axis maximum speed
 max_z_accel: 300             # Z-axis maximum acceleration
 square_corner_velocity: 5.0  # Square corner speed
 
@@ -320,6 +320,7 @@ path: ~/printer_data/gcodes
 [include macro-tc-nozzle_clean.cfg]
 [include ./T0-SB2209-Revo-LDO.cfg]
 [include ./T1-SB2209-Revo-LDO.cfg]
+[include ./T2-RP2040-Dragon-Step.cfg]
 #---------------------------------------------------------------
 [quad_gantry_level]
 #	Gantry Corners for 350mm Build
@@ -413,7 +414,7 @@ gcode:
 #*# max_y = 200.47
 #*#
 #*# [tool_probe T0]
-#*# z_offset = -1.005000
+#*# z_offset = -0.870000
 #*#
 #*# [extruder]
 #*# control = pid
@@ -422,15 +423,29 @@ gcode:
 #*# pid_kd = 75.574
 #*#
 #*# [tool T1]
-#*# gcode_x_offset = 0.018750
-#*# gcode_y_offset = 0.406250
-#*# gcode_z_offset = 0.235000
+#*# gcode_x_offset = 0.084375
+#*# gcode_y_offset = 0.490625
+#*# gcode_z_offset = 0.187500
 #*#
 #*# [tool_probe T1]
-#*# z_offset = -0.872500
+#*# z_offset = -0.777500
 #*#
 #*# [extruder1]
 #*# control = pid
 #*# pid_kp = 36.501
 #*# pid_ki = 4.124
 #*# pid_kd = 80.760
+#*#
+#*# [tool T2]
+#*# gcode_x_offset = 0.0
+#*# gcode_y_offset = 0.0
+#*# gcode_z_offset = 0.0
+#*#
+#*# [tool_probe T2]
+#*# z_offset = 0.0
+#*#
+#*# [extruder2]
+#*# control = pid
+#*# pid_kp = 27.329
+#*# pid_ki = 1.804
+#*# pid_kd = 103.505
