--- a/Software/v1.0 - MVP/toolchanger.cfg
+++ b/Software/v1.0 - MVP/toolchanger.cfg
@@ -32,12 +32,13 @@ params_sb_misschanger_path: [
                              {'x':-6.0,     'y':-40,     'f':1.00}
                             ]
 
-# Default shaper params
+## Default shaper params
+#  It is better to have something setup for IS than leaving it empty
 params_input_shaper_type_x: 'ei'
-params_input_shaper_freq_x: 42.600
+params_input_shaper_freq_x: 47.200
 params_input_shaper_damping_ratio_x: 0.100000
-params_input_shaper_type_y: '2hump_ei'
-params_input_shaper_freq_y: 39.000
+params_input_shaper_type_y: 'ei'
+params_input_shaper_freq_y: 34.800
 params_input_shaper_damping_ratio_y: 0.100000
 
 initialize_gcode:
